[package]
name = "fidget_math"
version = "0.3.0"
edition = "2021"
authors = ["Luke Powers"]
description = "glam vector types for tree construction with fidget"
repository = "https://github.com/LukeP0WERS/fidget_math"
license = "MIT"
readme = "README.md"

[dependencies]
fidget = { git = "https://github.com/mkeeter/fidget.git", branch = "x86-grad-bad-r8" } #"0.3"

[workspace]
members = [
    "codegen",
]